# tb_detection_web

./: .gitignore  README.md  pyproject.toml  server.py
client/: package.json  pnpm-lock.yaml
client/public/: index.html
client/src/: App.jsx  index.css
client/src/components/: NavButton.jsx
client/src/css/: App.css
client/src/scss/: App.scss
client/src/views/: About.jsx  Home.jsx  Models.jsx  Predict.jsx  Run.jsx  Team.jsx  index.js
legacy/: Features Extraction File.csv  app.py  covid.ipynb  deepL_model_pickle  deep_learning_file.py  final_data.csv  final_dataset.csv  kivy_appmajor.py  kivy_deeplearning_file.py  stackerfile.py  star_experimental_website.py
legacy/static/css/: bootstrap.min.css  style.css
legacy/static/js/: testjs.js
legacy/static/lib/isotope/: isotope.pkgd.js  isotope.pkgd.min.js
legacy/static/lib/lightbox/js/: lightbox.js  lightbox.min.js
legacy/static/lib/owlcarousel/: owl.carousel.js
legacy/static/lib/tempusdominus/css/: tempusdominus-bootstrap-4.min.css
legacy/static/lib/tempusdominus/js/: moment-timezone.min.js  moment.min.js  tempusdominus-bootstrap-4.min.js
legacy/static/lib/waypoints/: waypoints.min.js
legacy/static/scss/: bootstrap.scss
legacy/templates/: about.html  index.html  model.html  prediction.html  upload.html  view.html
model/: Features Extraction File.csv  __init__.py  accuracy.py
