[tool.poetry]
name = "tb-detection-web"
version = "0.1.0"
description = ""
authors = ["Harish <dev.harish3124@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">3.9, <3.12"
librosa = "^0.10.1"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
